// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`notice-icon > passes through additional html attributes 1`] = `
<section
  aria-labelledby="s0-status"
  class="page-notice class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <div
    class="page-notice__header"
    id="s0-status"
  >
    <svg
      aria-label="default label"
      class="icon--attention-filled icon icon--16 icon--attention-filled"
      focusable="false"
      role="img"
    >
      <defs>
        <symbol
          id="icon-attention-filled-16"
          viewBox="0 0 16 16"
        >
          <path
            d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm0 12a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 1 1-2 0V5a1 1 0 0 1 2 0v3Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-attention-filled-16"
      />
    </svg>
  </div>
  <div
    class="page-notice__main"
  >
    <!--F#13-->
    body
    <!--F/-->
  </div>
</section>
`;

exports[`notice-icon > passes through additional html attributes 2`] = `
<section
  aria-labelledby="s0-status"
  class="page-notice class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <div
    class="page-notice__header"
    id="s0-status"
  >
    <svg
      aria-label="default label"
      class="icon--attention-filled icon icon--16 icon--attention-filled"
      focusable="false"
      role="img"
    >
      <defs>
        <symbol
          id="icon-attention-filled-16"
          viewBox="0 0 16 16"
        >
          <path
            d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm0 12a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 1 1-2 0V5a1 1 0 0 1 2 0v3Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-attention-filled-16"
      />
    </svg>
  </div>
  <div
    class="page-notice__main"
  >
    <!--F#13-->
    body
    <!--F/-->
  </div>
</section>
`;

exports[`notice-icon > renders basic version 1`] = `
<div
  class="page-notice__header"
  id="s0-status"
>
  <svg
    aria-label="default label"
    class="icon--attention-filled icon icon--16 icon--attention-filled"
    focusable="false"
    role="img"
  >
    <defs>
      <symbol
        id="icon-attention-filled-16"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm0 12a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 1 1-2 0V5a1 1 0 0 1 2 0v3Z"
        />
      </symbol>
    </defs>
    <use
      href="#icon-attention-filled-16"
    />
  </svg>
</div>
`;

exports[`notice-icon > renders basic version 2`] = `
<section
  aria-labelledby="s0-status"
  class="page-notice page-notice--attention"
>
  <div
    class="page-notice__header"
    id="s0-status"
  >
    <svg
      aria-label="default label"
      class="icon--attention-filled icon icon--16 icon--attention-filled"
      focusable="false"
      role="img"
    >
      <defs>
        <symbol
          id="icon-attention-filled-16"
          viewBox="0 0 16 16"
        >
          <path
            d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm0 12a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 1 1-2 0V5a1 1 0 0 1 2 0v3Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-attention-filled-16"
      />
    </svg>
  </div>
  <div
    class="page-notice__main"
  >
    <!--F#13-->
    body
    <!--F/-->
  </div>
</section>
`;

exports[`notice-icon > renders basic version 3`] = `
<div
  class="page-notice__main"
>
  <!--F#13-->
  body
  <!--F/-->
</div>
`;

exports[`notice-icon > renders basic version 4`] = `
<svg
  aria-label="default label"
  class="icon--attention-filled icon icon--16 icon--attention-filled"
  focusable="false"
  role="img"
>
  <defs>
    <symbol
      id="icon-attention-filled-16"
      viewBox="0 0 16 16"
    >
      <path
        d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm0 12a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 1 1-2 0V5a1 1 0 0 1 2 0v3Z"
      />
    </symbol>
  </defs>
  <use
    href="#icon-attention-filled-16"
  />
</svg>
`;

exports[`notice-icon > renders education notice 1`] = `
<div
  class="section-notice__header"
  id="s0-status"
>
  <svg
    aria-label="education label"
    class="icon icon--24"
    focusable="false"
    role="img"
  >
    <defs>
      <symbol
        id="icon-lightbulb-24"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="m8.039 18.279-.035-.105c-.226-.68-.357-1.072-.574-1.525-.232-.486-.574-1.063-1.262-2.094l-.052-.078C5.148 13.026 4 11.304 4 9a8 8 0 1 1 16 0c0 2.304-1.148 4.026-2.116 5.477l-.052.078c-.688 1.031-1.03 1.608-1.262 2.094-.217.453-.348.845-.574 1.525l-.035.105-.612 2.449A3 3 0 0 1 12.439 23h-.877a3 3 0 0 1-2.91-2.272l-.613-2.45ZM6 9a6 6 0 1 1 12 0c0 1.654-.81 2.913-1.832 4.445-.699 1.049-1.107 1.722-1.403 2.341-.197.412-.34.792-.485 1.214H13v-5.586l1.707-1.707a1 1 0 0 0-1.414-1.414L12 9.586l-1.293-1.293a1 1 0 0 0-1.414 1.414L11 11.414V17H9.72a10.93 10.93 0 0 0-.485-1.214c-.296-.619-.704-1.292-1.403-2.34C6.811 11.912 6 10.653 6 9Zm7.72 10h-3.44l.311 1.243a1 1 0 0 0 .97.757h.877a1 1 0 0 0 .97-.757L13.72 19Z"
          fill-rule="evenodd"
        />
      </symbol>
    </defs>
    <use
      href="#icon-lightbulb-24"
    />
  </svg>
</div>
`;

exports[`notice-icon > renders education notice 2`] = `
<section
  aria-labelledby="s0-status"
  class="section-notice section-notice--education section-notice--education"
>
  <div
    class="section-notice__header"
    id="s0-status"
  >
    <svg
      aria-label="education label"
      class="icon icon--24"
      focusable="false"
      role="img"
    >
      <defs>
        <symbol
          id="icon-lightbulb-24"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="m8.039 18.279-.035-.105c-.226-.68-.357-1.072-.574-1.525-.232-.486-.574-1.063-1.262-2.094l-.052-.078C5.148 13.026 4 11.304 4 9a8 8 0 1 1 16 0c0 2.304-1.148 4.026-2.116 5.477l-.052.078c-.688 1.031-1.03 1.608-1.262 2.094-.217.453-.348.845-.574 1.525l-.035.105-.612 2.449A3 3 0 0 1 12.439 23h-.877a3 3 0 0 1-2.91-2.272l-.613-2.45ZM6 9a6 6 0 1 1 12 0c0 1.654-.81 2.913-1.832 4.445-.699 1.049-1.107 1.722-1.403 2.341-.197.412-.34.792-.485 1.214H13v-5.586l1.707-1.707a1 1 0 0 0-1.414-1.414L12 9.586l-1.293-1.293a1 1 0 0 0-1.414 1.414L11 11.414V17H9.72a10.93 10.93 0 0 0-.485-1.214c-.296-.619-.704-1.292-1.403-2.34C6.811 11.912 6 10.653 6 9Zm7.72 10h-3.44l.311 1.243a1 1 0 0 0 .97.757h.877a1 1 0 0 0 .97-.757L13.72 19Z"
            fill-rule="evenodd"
          />
        </symbol>
      </defs>
      <use
        href="#icon-lightbulb-24"
      />
    </svg>
  </div>
  <div
    class="section-notice__main"
  >
    <!--F#13-->
    body
    <!--F/-->
  </div>
</section>
`;

exports[`notice-icon > renders education notice 3`] = `
<svg
  aria-label="education label"
  class="icon icon--24"
  focusable="false"
  role="img"
>
  <defs>
    <symbol
      id="icon-lightbulb-24"
      viewBox="0 0 24 24"
    >
      <path
        clip-rule="evenodd"
        d="m8.039 18.279-.035-.105c-.226-.68-.357-1.072-.574-1.525-.232-.486-.574-1.063-1.262-2.094l-.052-.078C5.148 13.026 4 11.304 4 9a8 8 0 1 1 16 0c0 2.304-1.148 4.026-2.116 5.477l-.052.078c-.688 1.031-1.03 1.608-1.262 2.094-.217.453-.348.845-.574 1.525l-.035.105-.612 2.449A3 3 0 0 1 12.439 23h-.877a3 3 0 0 1-2.91-2.272l-.613-2.45ZM6 9a6 6 0 1 1 12 0c0 1.654-.81 2.913-1.832 4.445-.699 1.049-1.107 1.722-1.403 2.341-.197.412-.34.792-.485 1.214H13v-5.586l1.707-1.707a1 1 0 0 0-1.414-1.414L12 9.586l-1.293-1.293a1 1 0 0 0-1.414 1.414L11 11.414V17H9.72a10.93 10.93 0 0 0-.485-1.214c-.296-.619-.704-1.292-1.403-2.34C6.811 11.912 6 10.653 6 9Zm7.72 10h-3.44l.311 1.243a1 1 0 0 0 .97.757h.877a1 1 0 0 0 .97-.757L13.72 19Z"
        fill-rule="evenodd"
      />
    </symbol>
  </defs>
  <use
    href="#icon-lightbulb-24"
  />
</svg>
`;

exports[`notice-icon > renders inline version 1`] = `
<div
  aria-labelledby="s0-status"
  class="inline-notice extra-class"
>
  <div
    class="inline-notice__header"
    id="s0-status"
  >
    <svg
      aria-label="default label"
      class="notice-class icon--information-filled icon icon--16 icon--information-filled"
      focusable="false"
      role="img"
    >
      <defs>
        <symbol
          id="icon-information-filled-16"
          viewBox="0 0 16 16"
        >
          <path
            d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm1 11a1 1 0 1 1-2 0V8a1 1 0 0 1 2 0v3ZM8 6a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-information-filled-16"
      />
    </svg>
  </div>
  <div
    class="inline-notice__main"
  >
    <!--F#13-->
    body
    <!--F/-->
  </div>
</div>
`;

exports[`notice-icon > renders inline version 2`] = `
<svg
  aria-label="default label"
  class="notice-class icon--information-filled icon icon--16 icon--information-filled"
  focusable="false"
  role="img"
>
  <defs>
    <symbol
      id="icon-information-filled-16"
      viewBox="0 0 16 16"
    >
      <path
        d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm1 11a1 1 0 1 1-2 0V8a1 1 0 0 1 2 0v3ZM8 6a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"
      />
    </symbol>
  </defs>
  <use
    href="#icon-information-filled-16"
  />
</svg>
`;

exports[`notice-icon > renders title and footer version 1`] = `
<section
  aria-labelledby="s0-status"
  class="other-notice page-notice--attention"
>
  <div
    class="other-notice__header"
    id="s0-status"
  >
    <svg
      aria-label="default label"
      class="icon--attention-filled icon icon--16 icon--attention-filled"
      focusable="false"
      role="img"
    >
      <defs>
        <symbol
          id="icon-attention-filled-16"
          viewBox="0 0 16 16"
        >
          <path
            d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm0 12a1 1 0 1 1 0-2 1 1 0 0 1 0 2Zm1-4a1 1 0 1 1-2 0V5a1 1 0 0 1 2 0v3Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-attention-filled-16"
      />
    </svg>
  </div>
  <div
    class="other-notice__main"
  >
    <h2
      class="other-notice__title"
    >
      <!--F#12-->
      title
      <!--F/-->
    </h2>
    <!--F#13-->
    body
    <!--F/-->
  </div>
  <div
    class="other-notice__footer"
  >
    <!--F#18-->
    footer
    <!--F/-->
  </div>
</section>
`;

exports[`notice-icon > renders title and footer version 2`] = `
<div
  class="other-notice__main"
>
  <h2
    class="other-notice__title"
  >
    <!--F#12-->
    title
    <!--F/-->
  </h2>
  <!--F#13-->
  body
  <!--F/-->
</div>
`;

exports[`notice-icon > renders title and footer version 3`] = `
<div
  class="other-notice__footer"
>
  <!--F#18-->
  footer
  <!--F/-->
</div>
`;

exports[`notice-icon > renders title and footer version 4`] = `
<h2
  class="other-notice__title"
>
  <!--F#12-->
  title
  <!--F/-->
</h2>
`;
